# gravity_defied_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_run.bat  notes.md  todo.md  workspace.code-workspace
.github/workflows/: build.yml
cmake/: download_sdl2.cmake  mingw-sdl2.cmake  mingw-toolchain.cmake
src/: Game.cpp  Game.h  GameCanvas.cpp  GameCanvas.h  GameLevel.cpp  GameLevel.h  GameMenu.cpp  GameMenu.h  GamePhysics.cpp  GamePhysics.h  Helpers.cpp  Helpers.h  IGameMenuElement.h  IMenuManager.h  LevelLoader.cpp  LevelLoader.h  MRGLoader.cpp  MRGLoader.h  MathF16.cpp  MathF16.h  MenuManager.cpp  MenuManager.h  Micro.cpp  Micro.h  RecordManager.cpp  RecordManager.h  SavesManager.cpp  SavesManager.h  SettingsManager.cpp  SettingsManager.h  SettingsStringRender.cpp  SettingsStringRender.h  TextRender.cpp  TextRender.h  Timer.cpp  Timer.h  TimerOrMotoPartOrMenuElem.cpp  TimerOrMotoPartOrMenuElem.h  class_10.cpp  class_10.h  (+3 more)
src/lcdui/: Canvas.cpp  Canvas.h  CanvasImpl.cpp  CanvasImpl.h  Command.cpp  Command.h  CommandListener.h  Displayable.h  Font.cpp  Font.h  FontStorage.cpp  FontStorage.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h
src/lcdui/tests/: test_GameCanvas.cpp  test_GameCanvas.h  test_Graphics.cpp  test_Graphics.h
src/rms/: InvalidRecordIDException.h  RecordComparator.h  RecordEnumeration.h  RecordEnumerationImpl.cpp  RecordEnumerationImpl.h  RecordFilter.h  RecordStore.cpp  RecordStore.h  RecordStoreException.h  RecordStoreNotOpenException.h
src/tests/: test_GameCanvas.cpp  test_Graphics.cpp  test_Graphics.h  test_rms.cpp  test_rms.h
src/utils/: EmbedFileStream.cpp  EmbedFileStream.h  FileStream.h  Hashing.cpp  Hashing.h  Log.cpp  Log.h  Stream.h  String.h  Time.cpp  Time.h
